# db-jobs

./: .gitignore  README.md  catalog-info.yaml  config.example.cfg  db.example.cfg  db_plates_to_xlsx.py  dbjob.py  dbreport.py  dbreports.py  faults_to_csv.py  faults_to_xlsx.py  ispyb_plates_to_xlsx.py  jobs.example.cfg  lb_sample_processing_stats_to_csv.py  mariadbreport.py  mssqlreport.py  plates_to_xlsx.py  reports.cfg  rmaker_plates_to_xlsx.py  runjob.py  runreport.py  setup.cfg
conf/: datasources.example.cfg  jobs.example.cfg
src/dbjobs/: __init__.py  base.py  dbjob.py  dbreport.py
tests/: conftest.py  test_dbreport.py
