[metadata]
name = dbjobs
version = 0.5.0
description = Python package to execute SQL statements and optionally generate reports from the result sets.
description-file = README.md
long_description = This package allows the execution of SQL statements. Several different database systems are supported. Optionally, the result sets (if any) can be used to create reports in either xlsx or csv format, and the reports can be emailed as attachments. SQL statements, database connecttion details and email preferences are stored in configuration files.
author = Diamond Light Source
license = Apache License, Version 2.0

[options]
packages = find:
package_dir =
	=src
python_requires = >=3.7
scripts =
	bin/runjob.py
	bin/runreport.py

[options.packages.find]
where = src
